# research

./: Cargo.toml
sandbox_202510mnist/: main.py  pipfile
sandbox_202510var/: 20251030-ATTNBLOCKの意味.md  20251030-効率的な開発に何が必要か.md  Pipfile  README.md  basic_vae.py  cuda_test.py  makefile  vqvae.py
sandbox_202601catch/: .gitignore  Cargo.toml  README.md  catch.pyd  catch_env.html  catch_env.py  main.py  main_mujoco.py  makefile  pyproject.toml  train_ppo.py  train_simple.py
sandbox_202601catch/SO101/: scene_with_ball.xml
sandbox_202601catch/src/: lib.rs  main.rs
sandbox_202601mnist/: .gitignore  Makefile  mnist.py  pyproject.toml
sandbox_20260208build123d/: README.md  index.html  main.py  makefile  model.glb  pyproject.toml
sandbox_20260208build123d/ocp_vscode/: __init__.py
