[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "catch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13" # 3.12*にするために必要
dependencies = [
    "maturin",
    "numpy",
    "mujoco",
    "pillow>=12.1.0",
]
