[project]
name = "mnist-project"
version = "0.1.0"
description = "MNIST example with uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
]

[tool.uv]
package = true
# PyTorchの公式リポジトリを優先的に参照するように設定
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }